Show bookmark action even if the model isn't loaded

This CL shows the 'Add to Bookmark' action in the activity menu even if
the bookmark model isn't loaded yet.
If the model isn't loaded and the user tries to add the page to the
bookmarks, the action will silently fails.

Bug: 834723
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Id4ae21e3c20cdfad5487d95a928b52103614807d
Reviewed-on: https://chromium-review.googlesource.com/1025101
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553158}
Former-commit-id: 0d5bf221b2211022ba95b80d2b8d885128e8c0ba